<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:scrollbars="vertical"
    android:stackFromBottom="true"
    android:transcriptMode="alwaysScroll" >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:gravity="center_horizontal"
            android:id="@+id/name"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@null"
            android:textStyle="bold" />

        <TextView
            android:gravity="center_horizontal"
            android:id="@+id/version"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@null" />

        <TextView
            android:layout_height="20dp"
            android:layout_width="fill_parent"
            android:text="@null" />

        <Button
            android:enabled="false"
            android:id="@+id/install"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/initialize" />

        <Button
            android:enabled="false"
            android:id="@+id/start"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/start" />

        <Button
            android:enabled="false"
            android:id="@+id/stop"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/stop" />

        <Button
            android:enabled="false"
            android:id="@+id/remove"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/deconfigure" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal" >

            <Button
                android:enabled="false"
                android:id="@+id/pubkey_add"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_width="match_parent"
                android:text="@string/add_publickey" />

            <Button
                android:enabled="false"
                android:id="@+id/pubkey_remove"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_width="match_parent"
                android:text="@string/remove_publickey" />
        </LinearLayout>

        <TextView
            android:layout_height="20dp"
            android:layout_width="fill_parent"
            android:text="@null" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

</ScrollView>